feat: Implementar popup de aviso sobre datos ficticios
- Agregar popup fijo en esquina inferior izquierda
- Implementar funcionalidad con localStorage para persistencia
- Agregar estilos CSS responsive y animaciones
- Incluir script automático en todas las páginas HTML
- Crear documentación completa del popup
- Mensaje: '¡Aviso Importante! Este sitio web contiene datos ficticios para demostración y interacción con stakeholders'
- Funcionalidad: aparece una vez por usuario, se puede cerrar con botón o tecla Escape
- Cobertura: todas las páginas del sitio web

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
             });
         });
     </script>
-<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
+
+    <script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
+    
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
 </body>
 </html>
