--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -374,5 +374,8 @@
             @apply bg-surface rounded-lg shadow-subtle transition-all duration-300 hover:shadow-lg hover:scale-105;
         }
     </style>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
