--- a/pages/homepage_mission_driven_impact_hub.html
+++ b/pages/homepage_mission_driven_impact_hub.html
@@ -796,5 +796,8 @@
     </script>
     <script src="../public/analytics.js"></script>
 <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="../public/auto-data-notice.js"></script>
 </body>
 </html>
