--- a/pages/portal-empresas.html
+++ b/pages/portal-empresas.html
@@ -406,5 +406,8 @@
             alert('¡Solicitud de alianza enviada exitosamente! Te contactaremos en las próximas 48 horas.');
         });
     </script>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
