--- a/pages/programs_hub_interactive_impact_explorer.html
+++ b/pages/programs_hub_interactive_impact_explorer.html
@@ -546,5 +546,8 @@
     </style>
 
     <script src="../public/analytics.js"></script>
+    
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="../public/auto-data-notice.js"></script>
 </body>
 </html>
