--- a/pages/aplicar-estudiante.html
+++ b/pages/aplicar-estudiante.html
@@ -304,5 +304,8 @@
             alert('¡Aplicación enviada exitosamente! Te contactaremos pronto.');
         });
     </script>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
