--- a/pages/aplicar-mentor.html
+++ b/pages/aplicar-mentor.html
@@ -354,5 +354,8 @@
             alert('¡Aplicación de mentor enviada exitosamente! Te contactaremos pronto para coordinar una entrevista.');
         });
     </script>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
