--- a/pages/community_platform_supporter_connection_network.html
+++ b/pages/community_platform_supporter_connection_network.html
@@ -1140,5 +1140,8 @@
 
     <!-- Analytics Script -->
     <script src="../public/analytics.js"></script>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
