--- a/pages/get_involved_central_engagement_matching_platform.html
+++ b/pages/get_involved_central_engagement_matching_platform.html
@@ -1212,5 +1212,7 @@
     <script src="../public/analytics.js"></script>
     
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
 </body>
 </html>
