--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -322,5 +322,8 @@
             @apply bg-gradient-to-r from-primary-50 to-secondary-50;
         }
     </style>
+    <!-- Script para el popup de aviso sobre datos ficticios -->
+    <script src="/public/auto-data-notice.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
