fix: Forzar nuevo despliegue en Vercel y agregar configuración
- Agregar vercel.json para configuración correcta de archivos estáticos
- Actualizar versiones de scripts con parámetro ?v=1.0 para evitar cache
- Forzar nuevo despliegue en Vercel para corregir problemas de cache
- Asegurar que los archivos JavaScript se sirvan correctamente

--- a/pages/aplicar-estudiante.html
+++ b/pages/aplicar-estudiante.html
@@ -305,7 +305,7 @@
         });
     </script>
     <!-- Script para el popup de aviso sobre datos ficticios -->
-    <script src="/public/auto-data-notice.js"></script>
+    <script src="src="/public/auto-data-notice.js"?v=1.0"></script>
 <script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
