--- a/pages/programs_hub_interactive_impact_explorer.html
+++ b/pages/programs_hub_interactive_impact_explorer.html
@@ -548,6 +548,6 @@
     <script src="../public/analytics.js"></script>
     
     <!-- Script para el popup de aviso sobre datos ficticios -->
-    <script src="../public/auto-data-notice.js"></script>
+    <script src="src="../public/auto-data-notice.js"?v=1.0"></script>
 </body>
 </html>
