--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
     <script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
     
     <!-- Script para el popup de aviso sobre datos ficticios -->
-    <script src="/public/auto-data-notice.js"></script>
+    <script src="/public/auto-data-notice.js?v=1.0"></script>
 </body>
 </html>
