--- a/pages/donation_experience_impact_driven_giving_portal.html
+++ b/pages/donation_experience_impact_driven_giving_portal.html
@@ -576,7 +576,7 @@
     <script src="../public/analytics.js"></script>
     
     <!-- Script para el popup de aviso sobre datos ficticios -->
-    <script src="../public/auto-data-notice.js"></script>
+    <script src="src="../public/auto-data-notice.js"?v=1.0"></script>
 <script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
