--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -323,7 +323,7 @@
         }
     </style>
     <!-- Script para el popup de aviso sobre datos ficticios -->
-    <script src="/public/auto-data-notice.js"></script>
+    <script src="src="/public/auto-data-notice.js"?v=1.0"></script>
 <script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html> 
